--- a/templates/bookinstance_list_all_user_borrowed.html
+++ b/templates/bookinstance_list_all_user_borrowed.html
@@ -1,7 +1,7 @@
 {% extends 'base_generic.html' %}
 
 {% block content %}
-    {% if bookinstance_list and user.is_staff %}
+    {% if bookinstance_list and user.is.staff %}
     <h1>所有被借閱書籍</h1>
         <ul>
             {% for bookinst in bookinstance_list %}
