--- a/templates/catalog/book_renew_librarian.html
+++ b/templates/catalog/book_renew_librarian.html
@@ -12,4 +12,13 @@
     </table>
     <input type="submit" value="Submit" />
   </form>
+
+  <tr>
+    <th><label for="id_renewal_data">Renewal data:</label></th>
+    <td>
+      <input id="id_renewal_data" name="renewal_date" type="text" value="2016-11-08" required />
+      <br />
+      <span class="helptext">Enter data between now and 4 weeks</span>
+    </td>
+  </tr>
   {% endblock %}
