--- a/templates/bookinstance_list_all_user_borrowed.html
+++ b/templates/bookinstance_list_all_user_borrowed.html
@@ -2,20 +2,20 @@
 
 {% block content %}
 
-{% if bookinstance_list and user.is_staff %}
-<h1>所有被借閱書籍</h1>
-<ul>
-  {% for bookinst in bookinstance_list %}
-  <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-    <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>({{ bookinst.due_back }})
+    {% if bookinstance_list and user.is_staff %}
+        <h1>所有被借閱書籍</h1>
+        <ul>
+            {% for bookinst in bookinstance_list %}
+                <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
+                    <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>{{ bookinst.due_back }}-{% if user.is_staff %} {{ bookinst.borrower }}- <a href="{% url 'renew-book-librarian' bookinst.id %}">Renew</a>{% endif %}
+                </li>
+            {% endfor %}
 
-  </li>
-  {% endfor %}
-</ul>
-{% elif user.is_authenticated %}
-<h1>您沒有權限觀看</h1>
-{% else %}
-<p>沒有借閱的書籍</p>
-{% endif %}
+        </ul>
+    {% elif user.is_authenticated %}
+        <h1>您沒有權限觀看</h1>
+    {% else %}
+        <p>沒有借閱的書籍</p>
+    {% endif %}
 
 {% endblock %}
