--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -3,48 +3,50 @@
 
 <head>
 
-  {% block title %}<title>Local Library</title>{% endblock %}
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!-- Add additional CSS in static file -->
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block title %}<title>Local Library</title>{% endblock %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Add additional CSS in static file -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
-  <div class="container-fluid">
+<div class="container-fluid">
 
     <div class="row">
-      <div class="col-sm-2">
-        {% block sidebar %}
-        <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">首頁</a></li>
-          <li><a href="{% url 'books' %}">書籍列表</a></li>
-          <li><a href="{% url 'authors' %}">作者列表</a></li>
-          <li><a href="">書籍種類</a></li>
-          <li></li>
-          {% if user.is_authenticated %}
-            <li>{{ user.get_username }}</li>
-            <li><a href="{% url 'my-borrowed' %}">已借閱的書籍</a></li>
-            <li><a href="{% url 'logout' %}?next={{ request.path }}">登出</a></li>
-          {% else %}
-            <li><a href="{% url 'login' %}?next={{ request.path }}">登入</a></li>
-          {% endif %}
-          {% if user.is_staff %}
-            <li>管理者</li>
-            <li><a href="{% url 'all-borrowed' %}">所有借閱</a></li>
-          {% endif %}
-        </ul>
-        {% endblock %}
-      </div>
-      <div class="col-sm-10">
-        {% block content %}{% endblock %}
-        {% block pagination %}
-        {% if is_paginated %}
-        <div class="pagination">
+        <div class="col-sm-2">
+            {% block sidebar %}
+            <ul class="sidebar-nav">
+                <li><a href="{% url 'index' %}">首頁</a></li>
+                <li><a href="{% url 'books' %}">書籍列表</a></li>
+                <li><a href="{% url 'authors' %}">作者列表</a></li>
+                <li><a href="">書籍種類</a></li>
+                {% if not user.is_authenticated %}
+                <li><a href="{% url 'login' %}?next={{ request.path }}">登入</a></li>
+                {% endif %}
+                <br/>
+                {% if user.is_authenticated %}
+                <li>{{ user.get_username }}</li>
+                <li><a href="{% url 'my-borrowed' %}">已借閱的書籍</a></li>
+                <li><a href="{% url 'logout' %}?next={{ request.path }}">登出</a></li>
+                {% endif %}
+                {% if user.is_staff %}
+                <br/>
+                <li>管理者</li>
+                <li><a href="{% url 'all-borrowed' %}">所有借閱</a></li>
+                {% endif %}
+            </ul>
+            {% endblock %}
+        </div>
+        <div class="col-sm-10">
+            {% block content %}{% endblock %}
+            {% block pagination %}
+            {% if is_paginated %}
+            <div class="pagination">
           <span class="page-links">
             {% if page_obj.has_previous %}
             <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
@@ -56,12 +58,12 @@
             <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
             {% endif %}
           </span>
+            </div>
+            {% endif %}
+            {% endblock %}
         </div>
-        {% endif %}
-        {% endblock %}
-      </div>
     </div>
-  </div>
+</div>
 </body>
 
 </html>
