--- a/templates/bookinstance_list_borrowed_user.html
+++ b/templates/bookinstance_list_borrowed_user.html
@@ -7,7 +7,7 @@
         <ul>
             {% for bookinst in bookinstance_list %}
                 <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-                    <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>({{ bookinst.due_back }})
+                    <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>({{ bookinst.due_back }})- <a href="{% url 'renew-book-librarian' bookinst.id %}">Renew</a>
                 </li>
             {% endfor %}
         </ul>
