--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     {% if validlink %}
-        <p>Please enter (and confirm) your new password</p>
+        <p>請輸入新密碼</p>
         <form action="" method="post">
             <div style="display: none">
                 <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
@@ -26,7 +26,7 @@
             </table>
         </form>
     {% else %}
-        <h1>Password reset failed</h1>
+        <h1>密碼重設失敗</h1>
         <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
     {% endif %}
 
