--- a/templates/bookinstance_list_all_user_borrowed.html
+++ b/templates/bookinstance_list_all_user_borrowed.html
@@ -7,7 +7,7 @@
         <ul>
             {% for bookinst in bookinstance_list %}
                 <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-                    <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>{{ bookinst.due_back }}-{% if user.is_staff %} {{ bookinst.borrower }}- <a href="{% url 'renew-book-librarian' bookinst.id %}">Renew</a>{% endif %}
+                    <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>-借閱者({{ bookinst.borrower }})-{% if user.is_staff %} 到期日({{ bookinst.due_back }})- <a href="{% url 'renew-book-librarian' bookinst.id %}">延期</a>{% endif %}
                 </li>
             {% endfor %}
 
