--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<p>Logged out!</p>
+<p>已登出!</p>
 
-<a href="{% url 'login' %}">Click here to login again.</a>
+<a href="{% url 'login' %}">點擊已再次登入</a>
 {% endblock %}
