--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,7 +1,7 @@
 {% extends 'base_generic.html' %}
 {% block content %}
 
-<h1>The password has been changed!</h1>
-<p><a href="{% url 'login' %}">log in again?</a> </p>
+<h1>恭喜您!密碼重設成功~</h1>
+<p><a href="{% url 'login' %}">重新登入?</a> </p>
 
 {% endblock %}
