--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -32,6 +32,6 @@
         </div>
     </form>
 
-    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+    <p><a href="{% url 'password_reset' %}">忘記密碼?</a></p>
 
 {% endblock %}
