--- a/templates/bookinstance_list_borrowed_user.html
+++ b/templates/bookinstance_list_borrowed_user.html
@@ -7,7 +7,7 @@
 <ul>
     {% for bookinst in bookinstance_list %}
     <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-        <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>到期日({{ bookinst.due_back }})- <a
+        <a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>-到期日({{ bookinst.due_back }})- <a
             href="{% url 'renew-book-people' bookinst.id %}">延期</a>
     </li>
     {% endfor %}
