--- a/templates/author_detail.html
+++ b/templates/author_detail.html
@@ -1,8 +1,8 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>Author: {{ author }}</h1>
-    <p>{{ author.data_of_birth }}-{{ author.data_of_death }}</p>
+<h1>作者: {{ author }}</h1>
+<p>({{ author.data_of_birth }}-{% if author.data_of_death == none %} Alive {% else %}{{ author.data_of_death }} {% endif %})</p>
 
     <div style="margin-left: 20px;margin-top: 20px">
         <h4>Books</h4>
